--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.x.x",
     "dotenv": "^16.x.x",
-    "express": "^4.x.x"
+    "express": "^4.x.x",
+    "nodemon": "^3.1.7"
   },
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
